--- a/views/homelab.ejs
+++ b/views/homelab.ejs
@@ -13,10 +13,10 @@
 
         <p class="text">My homelab is used to host all my stuff, from websites and game servers to shared cloud desktops.</p>
 
-        <p class="text">All nodes run proxmox ve (clustered).</p>
+        <p class="text">Bare metal machines run Proxmox VE (clustered).</p>
 
         <div style="margin-bottom: 35px;"></div>
-        <h3 class="subtitle">🚧 compute nodes</h3>
+        <h3 class="subtitle">🚂 Compute Nodes</h3>
         <hr>
         <table>
          <thead>
@@ -46,7 +46,7 @@
 
         <div style="margin-bottom: 35px;"></div>
      
-        <h3 class="subtitle">🍚 monitoring & backups</h3>
+        <h3 class="subtitle">🛟 Monitoring & Backups</h3>
         <hr>
         <p class="text"><a class="link-text text" href="https://hetrixtools.com" target="_blank">Hetrixtools</a> is used to monitor uptime, cpu, ram storage and bandwidth usage, <a class="link-text text" href="https://ntfy.sh" target="_blank">ntfy</a> is used for real-time push notifications about incidents.</p>
         <p class="text">Encrypted backups of server disks are sent to <a class="link-text text" href="https://backblaze.com" target="_blank">Backblaze</a>.</p>
