--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,11 +11,11 @@
     <div class="box-1">
         <%- include('partials/navbar') %>
 
-        <p class="text">Hello internet, my name is Alecks. I’m a hobbyist (& self-taught) developer from Australia with a passion for computers, programming, homelabbing and system administration.</p>
-        <p class="text">I use this website to showcase my exerience with different technologies, blog about things I've learned like server security, the process of building my home server (coming soon) and display my digital garden.</p>
+        <p class="text">Hello internet, my name is Alex. I’m a hobbyist developer from Australia with a passion for computers, tinkering, programming, homelabbing and system administration.</p>
+        <p class="text">I use this website to showcase my exerience with different technologies, blog about things I've learned or just thoughts and opinions and display my digital garden.</p>
 
         <div style="margin-bottom: 35px;"></div>
-        <h3 class="subtitle">✏️ latest blog posts</h3>
+        <h3 class="subtitle">✏️ Latest Blog Posts</h3>
         <hr>
 
       <div>
@@ -26,9 +26,9 @@
 
         <div style="margin-bottom: 35px;"></div>
      
-        <h3 class="subtitle">🍚 public resources</h3>
+        <h3 class="subtitle">📬 Contact Me</h3>
         <hr>
-        <p class="text"><a class="link-text text" href="https://status.alecks.cloud" target="_blank">Cloud Status</a> - past uptime and current status of my cloud.</p>
+        <p class="text">Reach out to me via email at <a class="link-text text" href="mailto:alecks03@proton.me" target="_blank">alecks03@pm.me</a> or Signal (alecks.54), response times will vary.</p>
     </div>
 </body>
 </html>
