--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -19,9 +19,9 @@
 
         <div style="margin-bottom: 35px;"></div>
      
-        <h3 class="subtitle">🕰️ post frequency</h3>
+        <h3 class="subtitle">🕰️ Post Frequency</h3>
         <hr>
-        <p class="text">lately I've been busy with other things, but I plan to get back into writing blog posts soon.</p>
+        <p class="text">Recently I've been busy with other things, but blogging is starting to become apart of my routine again.</p>
     </div>
 </body>
 </html>
