--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,17 +11,16 @@
     <div class="box-1">
         <%- include('partials/navbar') %>
 
-        <p class="text">I'm a teenager from Australia (Kiwi Background), my main interests at the moment are technology, listening to music, watching anime, system administration, linux, programming and self hosting.</p>
-        <p class="text">Additionally I love gaming, retro tech, nature, documentaries, philosophy and deep night talks.</p>
+        <p class="text">I'm a teenager from Australia (Kiwi Background), my main interests at the moment are technology, digital miminalism, old technology, listening to music, watching anime, linux, programming and self hosting.</p>
+        <p class="text">Additionally, I love gaming, nature, documentaries, philosophy and deep night talks.</p>
 
 
         <div style="margin-bottom: 35px;"></div>
      
-        <h3 class="subtitle">🎖️ aspirations</h3>
+        <h3 class="subtitle">🎴 Aspirations</h3>
         <hr>
         <p class="text">I'm planning to land a career in the tech industry, something like a devops engineer, cloud engineer, system administrator, network engineer or software engineer.</p>
         <p class="text">Something really cool I want to do, probably not as a full time job but as a hobby is I want to make documentaries similar in stlye to people like <a class="link-text text" href="https://www.youtube.com/@BrandonFM" target="_blank">BrandonFM</a>, <a class="link-text text" href="https://www.youtube.com/@fern-tv" target="_blank">Fern</a> and <a class="link-text text" href="https://www.youtube.com/@iambysurf" target="_blank">BySurf</a>.</p>
-
     </div>
 </body>
 </html>
