--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -24,6 +24,11 @@ body {
 .text {
     color: rgb(175, 169, 169);
     font-size: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+
 }
 .text code {
     font-size: 16px;
