--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
      
         <h3 class="subtitle">📬 Contact Me</h3>
         <hr>
-        <p class="text">Reach out to me via email at <a class="link-text text" href="mailto:alecks03@proton.me" target="_blank">alecks03@pm.me</a> or Signal (alecks.54), response times will vary.</p>
+        <p class="text">Reach out to me via email at <a class="link-text text" href="mailto:alecks03@pm.me" target="_blank">alecks03@pm.me</a> or Signal (alecks.54), response times will vary.</p>
     </div>
 </body>
 </html>
