update homelab and garden page

--- a/views/garden.ejs
+++ b/views/garden.ejs
@@ -12,22 +12,22 @@
         <%- include('partials/navbar') %>
 
         <p class="text">Welcome to my digital garden, a collection of everything I've made over the years. I'm still working on adding everything in.<p>
+     
+        <div style="margin-bottom: 35px;"></div>
+        <h3 class="subtitle">🚙 My Services</h3>
+        <hr>
+        <p class="text"><a class="link-text text" href="https://alecks.xyz" target="_blank">Game Hosting</a> - free high-performance game hosting with fully owned hardware, ryzen cpus and ddos protection.</p>
 
 
         <div style="margin-bottom: 35px;"></div>
-     
-        <h3 class="subtitle">🚙 My Services</h3>
+        <h3 class="subtitle">💿 Website Archives</h3>
         <hr>
-        <p class="text"><a class="link-text text" href="https://panel.alecks.dev" target="_blank">Pyrodactyl</a> - control panel to deploy and manage game servers running docker at its core, wings runs on Freight.</p>
-
-
-        <h3 class="subtitle">🥁 Website Archives</h3>
-        <hr>
-        <p class="text"><a class="link-text text" href="https://v1.alecks.dev" target="_blank">Alecks (v1)</a> - the og alecks.dev website, includes a blog, experience page, projects, about me and password generator.</p>
-        <p class="text"><a class="link-text text" href="https://v2.alecks.dev" target="_blank">Alecks (v2)</a> - updated alecks.dev website with a terminal/linux style design, only kept this for a little bit.</p>
+        <p class="text"><a class="link-text text" href="https://v1.archive.alecks.dev" target="_blank">Alecks v1</a> - the og alecks.dev website, includes a blog, experience page, projects, about me and password generator.</p>
+        <p class="text"><a class="link-text text" href="https://v2.archive.alecks.dev" target="_blank">Alecks v2</a> - updated alecks.dev website with a terminal/linux style design, only kept this for a little bit.</p>
         <p class="text"><a class="link-text text" href="https://a3d-website-v1.pages.dev/" target="_blank">A3D</a> - includes a minimalistic homepage, services and about page, a3d was an abbreviation of my old username.</p>
 
-        <h3 class="subtitle">🪓 Projects</h3>
+        <div style="margin-bottom: 35px;"></div>
+        <h3 class="subtitle">🚧 Projects</h3>
         <hr>
         <p class="text"><a class="link-text text" href="https://github.com/alecks20/cloudy" target="_blank">Cloudy</a> - my attempt at a feature packed multipurpose discord bot with discord.py, docker and mongodb.</p>
 
